--- a/restaurant/style.css
+++ b/restaurant/style.css
@@ -26,6 +26,7 @@ nav a {
     font-family: 'Raleway', sans-serif;
     font-size: 2vw;
     padding: 10px;
+    cursor: pointer;
 }
 
 nav #logo {
@@ -66,6 +67,7 @@ nav #logo {
     color: black;
     font-family: 'Raleway', sans-serif;
     margin: 10px;
+    cursor: pointer;
 }
 
 #content ul {
@@ -135,7 +137,7 @@ button {
     background-color: rgba(240, 248, 255, 0);
     border: 1px solid goldenrod;
     padding: 10px;
-    cursor: grab;
+    cursor: pointer;
 }
 
 button:hover {
@@ -186,7 +188,7 @@ button:hover {
     font-size: 2em;
     background-color: rgba(240, 248, 255, 0);
     border: none;
-    cursor: grab;
+    cursor: pointer;
     padding: 0px;
     margin-right: 15px;
 }
@@ -196,5 +198,59 @@ button:hover {
 }
 
 #readmore {
-    cursor: grab;
+    cursor: pointer;
+}
+
+
+input[type=text],
+select,
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid black;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    font-family: 'Raleway', sans-serif;
+}
+
+input[type=submit] {
+    background-color: goldenrod;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+
+input[type=submit]:hover {
+    background-color: goldenrod;
+}
+
+#date input {
+    padding: 10px;
+    width: 15%;
+    border: 1px solid black;
+}
+
+.container {
+    border-radius: 5px;
+    background-color: white;
+    padding: 20px;
+    width: 70%;
+    margin-bottom: 50px;
+    font-family: 'Raleway', sans-serif;
+}
+
+#locations {
+    margin-bottom: 50px;
+}
+
+#kort {
+    background-image: url(billeder/SVG/map.svg);
+    width: 70%;
+    height: 300px;
+    margin-bottom: 50px;
 }
