--- a/restaurant/style.css
+++ b/restaurant/style.css
@@ -33,6 +33,7 @@ nav a {
     font-size: 1rem;
     padding: 10px;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 nav #logo {
@@ -129,7 +130,7 @@ nav #logo {
 /*FORSIDE*/
 
 #dish {
-    background-image: url(billeder/SVG/dish.svg);
+    background-image: url(billeder/SVG/cirkel.svg);
     width: 70vw;
     height: 70vw;
 
