--- a/restaurant/style.css
+++ b/restaurant/style.css
@@ -171,8 +171,8 @@ nav #logo {
 
 #historie {
     max-width: 70%;
-    text-align: justify;
     margin: 50px;
+    line-height: 30px
 }
 
 #food {
